examples/test/testpolicy12881.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12881
  namespace: namespace289
spec:
  podSelector:
    matchLabels:
      key48: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value27
          key6: value8
          key40: value8
      podSelector:
        matchLabels:
          key2: value41
          key47: value41
